<resources>
    <string name="app_name">YouTube Downloader</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_share">YouTube Downloader</string>
    <string name="title_activity_settings">YouTube Downloader Settings</string>
    <string name="title_activity_upgrade_apk">YouTube Downloader Upgrade</string>
    <string name="tutorial_title">General App tutorial</string>
    <string name="tutorial_msg">Now you will see a list with all the codecs and qualities available for the selected video.
		\n\nChoose one item and you will be asked to download the video locally (on the device) or to send the download via SSH to a linux machine.
		\n\nDestination linux-box requirements: Bash and Wget. Additional SSH info further on.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="error">Error!</string>
    <string name="information">Information</string>
    <string name="dialogs_negative">Cancel</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="invalid_url">Unable to retrieve web page. URL may be invalid.</string>
    <string name="invalid_url_short">Unable to retrieve web page.</string>
    <string name="invalid_response">Invalid HTTP server response.</string>
    <string name="bad_link">Check the provided link.</string>
    <string name="bad_link_dialog_msg">Not a valid YouTube link.</string>
    <string name="no_net">No connection available.</string>
    <string name="no_net_dialog_msg">Please, enable a network connection first.</string>
    <string name="no_market">No market App available.</string>
    <string name="no_market_dialog_msg">Please, install Google Play</string>
    <string name="list_click_dialog_title">Confirm download for:</string>
    <string name="list_click_download_local">Download here</string>
    <string name="list_click_download_ssh">Send via SSH</string>
    <string name="rename_dialog_title">New filename:</string>
    <string name="rename_dialog_msg">Do not enter the file extension (like .mp4 or .flv).</string>
    <string name="unable_save">Unable to save the video!</string>
    <string name="unable_save_dialog_msg">Destination folder is NOT available and/or NOT writable.</string>
    <string name="ssh_info_tutorial_title">Send via SSH How-To</string>
    <string name="ssh_info_tutorial_msg">A single long command has been loaded in the clipboard.
		\n\nChoose a profile in ConnectBot and once in your remote shell, browse to the desired 
		directory, PASTE the command (use the menu button) and push ENTER.</string>
    <string name="callConnectBot_dialog_title">ConnectBot not installed!</string>
    <string name="callConnectBot_dialog_msg">You need this free App to send the video download via SSH.</string>
    <string name="callConnectBot_dialog_positive">Install ConnectBot</string>
    <string name="download_complete_dialog_msg1">YouTube Video:\n</string>
    <string name="download_complete_dialog_msg2">\nSuccessfully downloaded.</string>
    <string name="download_complete_dialog_positive">Open</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="cancel_download_dialog_title">Cancel download?</string>
    <string name="video_list_error_toast">Error in video list</string>
    <string name="codec">\n\n\tCodec: </string>
    <string name="quality">\n\tQuality: </string>
    <string name="size">\n\tSize: </string>
    <string name="attention">Attention!</string>
    <string name="extsdcard_warning">This App cannot write files on the external (removable) sdcard.\nStay on the standard sdcard.</string>
    <string name="system_warning">It\'s not possible to write files in a system folder.\nStay on the standard sdcard.</string>
    <string name="update_disabled_summary">Found different signature (F-Droid?)</string>
    <string name="upgrade_button_init">Update</string>
    <string name="upgrade_button_download">Download\nand install</string>
    <string name="upgrade_uppertext_searching">Searching&#8230;</string>
    <string name="upgrade_uppertext_init">Installed version:\n</string>
    <string name="upgrade_dialog_msg">New version available:\t</string>
    <string name="upgrade_dialog_positive">Download</string>
    <string name="upgrade_latest">Latest:\t</string>
    <string name="upgrade_installed">\nInstalled:\t</string>
    <string name="upgraded_dialog_msg">New version stored in standard sdcard \'Download\' folder.\n\nInstall now?</string>
    <string name="upgraded_dialog_negative">Later\n(manually)</string>
    <string name="upgrade_latest_installed">Latest version is already installed!</string>
    <string name="upgrade_network_error">Unable to retrieve update data.\nRetry later.</string>
    <string name="upgrade_bad_md5_dialog_msg">Downloaded package corrupted.\nWill be deleted now.\nPress OK to download it again.</string>
    <string name="notification_downloading_pt1">Downloading</string>
    <string name="notification_downloading_pt2">video files</string>
    <string name="notification_no_downloads">No downloads in progress</string>
    <string name="dm_title">View Downloads</string>
    <string name="dm_title_condensed">Downloads</string>
    <string name="dm_summary">Open system\'s Download Manager</string>
    <string name="update_title">Check for updates</string>
    <string name="update_title_condensed">Update</string>
    <string name="settings_cat_tutorials">Tutorials</string>
    <string name="quick_start_title">Quick start</string>
    <string name="quick_start_summ">Open a quick start tutorial</string>
    <string name="quick_start_text">Here are just the preferences for \'YouTube Downloader\'.
		\n\nThe actual App can be accessed via the share button in the YouTube App, while watching a video.
		\n\nThen choose \'YouTube Downloader\' and you will have further usage info.
		\n\nYou can also share any YouTube plain text link via any other App: i.e. your browser.</string>
    <string name="general_info_title">Enable General how-to</string>
    <string name="general_info_summary">Show a general App tutorial on startup</string>
    <string name="show_again_checkbox">Show again next time</string>
    <string name="ssh_info_title">Enable SSH how-to</string>
    <string name="ssh_info_summary">Show a quick tip about remote downloading via SSH</string>
    <string name="settings_cat_folder">Download folder</string>
    <string name="standard_location_title">Choose standard folder</string>
    <string name="standard_location_default">Downloads</string>
    <string name="chooser_swap_title">Swap chooser</string>
    <string name="chooser_location_title">Open file-chooser</string>
    <string name="chooser_location_summary">Long-press to select a folder</string>
    <string name="settings_cat_files">Video files</string>
    <string name="enable_q_suffix_title">Append quality suffix</string>
    <string name="enable_q_suffix_summary">Append the video quality type to the file name</string>
    <string name="enable_rename_title">Enable file rename</string>
    <string name="enable_rename_summary">Rename the video file before downloading it (for the local download only)</string>
    <string name="show_size_title">Show file size</string>
    <string name="show_size_summary">Fetch the video file size on download confirmation message (slower)</string>
    <string name="settings_cat_notifications">Notifications</string>
    <string name="enable_own_notification_title">Enable own notification</string>
    <string name="enable_own_notification_summary">Show a comprehensive notification about all YTD downloads</string>
    <string name="download_manager_notification_title">Manage system\'s notifications</string>
    <string name="download_manager_notification_dialog_title">Show system\'s Download Manager notifications:</string>
    <string name="download_manager_notification_default">VISIBLE</string>
    <string name="settings_cat_about">About this App</string>
    <string name="title_changelog">Changelog</string>
    <string name="changelog">
        \n v1.6 - Mar 01 2013
		\n-----------------------------------
		\n[x] own YTD notification bar
		\n[x] options for own and sys notif.
		\n[x] added some credits
		\n
        \n v1.5.2 - Feb 25 2013
		\n-----------------------------------
		\n[x] better fix on bad video list
		\n[x] remove stop download on click
		\n[x] open DM on notif. bar click
		\n    (still not working in CM ROM)
		\n
        \n v1.5.1 - Feb 24 2013
		\n-----------------------------------
		\n[x] fix crash if no net is avail.
		\n[x] fix crash on bad video list
		\n
		\n v1.5 - Feb 22 2013
		\n-----------------------------------
		\n[x] online update check
		\n[x] option to fetch filesizes
		\n[x] stop download on click
		\n    (maybe not working in CM 10.1)
		\n[x] DownloadManager quick links
		\n[x] settings and DM overflow menu
		\n[x] reordered preferences
		\n[x] small fixes
		\n
		\n v1.4 - Jan 29 2013
		\n-----------------------------------
		\n[x] licenses and code links
		\n[x] Share this App option
		\n
		\n v1.3.1 - Jan 19 2013
		\n-----------------------------------
		\n[x] handle again http|https links
		\n    (thanks Reiner)
		\n
		\n v1.3 - Jan 18 2013
		\n-----------------------------------
		\n[x] share via mobile links support
		\n
		\n v1.2 - Dec 25 2012
		\n-----------------------------------
		\n[x] fix for YouTube webpage changes
		\n
		\n v1.1.1 - Dec 16 2012
		\n-----------------------------------
		\n[x] preferences fix
		\n
		\n v1.1 - Dec 13 2012
		\n-----------------------------------
		\n[x] all text strings exported
		\n[x] preferences modification
		\n[x] quick start tutorial
		\n
		\n v1.0.1 - Dec 11 2012
		\n-----------------------------------
		\n[x] bad typo fixed
		\n[x] file-chooser new folder icons
		\n
		\n v1.0 - Dec 11 2012
		\n-----------------------------------
		\n[x] FIRST PUBLIC RELEASE
		\n[x] send download via SSH
		\n[x] JB compatibility
		\n[x] SSH send how-to dialog
		\n[x] standard download locations
		\n[x] file-chooser for download dest.
		\n[x] add quality suffix options
		\n[x] file renaming options
		\n-----------------------------------</string>
    <string name="screen_licences_code_title">Licenses and Code</string>
    <string name="settings_cat_licenses">Licenses</string>
    <string name="gpl_title">YTD\'s License</string>
    <string name="gpl_summary">GPL-3.0</string>
    <string name="title_activity_gpl_show">GPL-3.0</string>
    <string name="mit_title">Filechooser\'s Licence</string>
    <string name="mit_summary">MIT License</string>
    <string name="credits_title">Other credits</string>
    <string name="credits_summary">Code excerpts License</string>
    <string name="settings_cat_code">Source Code</string>
    <string name="ytd_code_git_title">YTD at GitHub</string>
    <string name="ytd_code_git_summary">https://github.com/dentex/ytdownloader/</string>
    <string name="ytd_code_hg_title">YTD at Sourceforge</string>
    <string name="ytd_code_hg_summary">https://sourceforge.net/projects/ytdownloader/</string>
    <string name="chooser_code_title">Filechooser at Google Code</string>
    <string name="chooser_code_summary">https://code.google.com/p/android-filechooser/</string>
    <string name="settings_cat_social">Social</string>
    <string name="share_title">Share this App</string>
    <string name="share_summary">via Twitter, Facebook, Gmail, etc&#8230;</string>
</resources>